Switched to using sentence transformers model (instead of BERT)

--- a/testing/embeddings.ipynb
+++ b/testing/embeddings.ipynb
@@ -5,13 +5,41 @@
    "execution_count": 1,
    "id": "0fc0957c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/matti/code/Apps/TextualMediaSearcher/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
-    "from transformers import AutoTokenizer, AutoModel\n",
     "import numpy as np\n",
     "from nltk.tokenize import sent_tokenize\n",
-    "from sklearn.metrics.pairwise import cosine_similarity"
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "from transformers import AutoTokenizer, AutoModel\n",
+    "from sentence_transformers import SentenceTransformer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bc13e69",
+   "metadata": {},
+   "source": [
+    "## Embeddings models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbf14e52",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#### BERT (AutoModel)"
    ]
   },
   {
@@ -64,6 +92,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "431cec80",
+   "metadata": {},
+   "source": [
+    "#### Sentence Transformers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e5e6ec27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
+    "model = SentenceTransformer(model_name)\n",
+    "\n",
+    "def embed_sentences(sents: list[str] | str) -> np.ndarray:\n",
+    "    \"\"\"  \"\"\"\n",
+    "    if not isinstance(sents, list):\n",
+    "        sents = [sents]\n",
+    "    return model.encode(sents)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a715c6d",
+   "metadata": {},
+   "source": [
+    "## Main"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "e1d0821f",
@@ -80,20 +141,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "a25aa3de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   0/159\n",
+      "  16/159\n",
+      "  32/159\n",
+      "  48/159\n",
+      "  64/159\n",
+      "  80/159\n",
+      "  96/159\n",
+      " 112/159\n",
+      " 128/159\n",
+      " 144/159\n"
+     ]
+    }
+   ],
    "source": [
     "# get sentence embeddings\n",
     "sents = sent_tokenize(text)\n",
-    "sent_embeddings = np.zeros((len(sents), model.config.hidden_size), dtype=\"float32\")\n",
     "batch_size = 16\n",
+    "\n",
+    "embeddings_size = model.get_sentence_embedding_dimension()\n",
+    "sent_embeddings = np.zeros((len(sents), embeddings_size), dtype=\"float32\")\n",
     "for i in range(0, len(sents), batch_size):\n",
     "    print(\" {:>3}/{}\".format(i, len(sents)))\n",
     "    batch = sents[i : i+batch_size]\n",
     "    batch_embeds = embed_sentences(batch)\n",
     "    sent_embeddings[i:i+batch_size, :] = batch_embeds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f153eb8",
+   "metadata": {},
+   "source": [
+    "#### Save & Load"
    ]
   },
   {
@@ -129,8 +217,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5aae9a0",
+   "metadata": {},
+   "source": [
+    "#### Run"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "21e62fc6",
    "metadata": {},
    "outputs": [
@@ -138,11 +234,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7724  |  Tämän vuoksi Suomi oli usein Ruotsin ja venäläisten valtioiden (Novgorodin, Moskovan ja keisarillisen Venäjän) välisten sotien taistelutantereena tai sodankäynnin tukialueena.\n",
-      "0.7683  |  Venäjän vallan aika oli Suomen kannalta yksi historian rauhallisimmista kausista (vain Oolannin sota kosketti Suomen aluetta), mutta jonkin verran suomalaisia vapaaehtoisjoukkoja tai upseereita taisteli Venäjän lipun alla Manner-Euroopassa ja Aasiassa.\n",
-      "0.7600  |  Suomi, Baltian maat ja puolet Puolasta kuuluivat Neuvostoliiton etupiiriin.\n",
-      "0.7425  |  Suomen sotahistorian pitkäaikaisena piirteenä oli kuuluminen Ruotsin valtakuntaan keskiajalta vuoteen 1809 asti.\n",
-      "0.7398  |  Vuosina 1809–1917 Suomen suuriruhtinaskunnan sotahistoria oli luonnollisesti sidoksissa Venäjän keisarikuntaan.\n"
+      "0.6892  |  Suomen asema hyökkäyksessä oli pitkään epäselvä, mutta sille oli joka tapauksessa varattu siinä rooli.\n",
+      "0.6491  |  Venäjän vallan aika oli Suomen kannalta yksi historian rauhallisimmista kausista (vain Oolannin sota kosketti Suomen aluetta), mutta jonkin verran suomalaisia vapaaehtoisjoukkoja tai upseereita taisteli Venäjän lipun alla Manner-Euroopassa ja Aasiassa.\n",
+      "0.6450  |  Suomen asema välirauhan aikaan talvisodan jälkeen oli ollut hyvin tukala ja poliittinen liikkumavara oli niukka.\n",
+      "0.6267  |  Nyt Suomi nähtiin tärkeänä osana hyökkäyksessä itään.\n",
+      "0.6215  |  Alkuvaiheessa kuitenkin talonpoikainen nostoväki oli edelleen sotavoimien ydinjoukkona.\n"
      ]
     }
    ],
@@ -169,7 +265,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "himocast_downloader",
+   "display_name": "TextualMediaSearcher",
    "language": "python",
    "name": "python3"
   },
